<resources>
    <string name="app_name">Unicef</string>
    <string name="title_activity_maps">Map</string>
    <string name="signin_button_lablel">Войти</string>
    <string name="email">  E-mail  </string>
    <string name="password"> Пароль </string>
    <string name="forgot_password"> Забыли пароль? </string>
    <string name="create_account"> Создать аккаунт </string>
    <string name="name"> ФИО </string>
    <string name="phone"> Номер телефона </string>
    <string name="confirm_password"> Подтверждение пароля </string>
</resources>
