<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/unicefLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/unicef_margin_left"
        android:layout_marginRight="@dimen/unicef_margin_right"
        app:srcCompat="@drawable/unicef" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Добро пожаловать!"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/signin_firsttext"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/secondTopText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Войдите в свой аккаунт!"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/signin_secondtext"
            android:textStyle="normal"
            />

    </LinearLayout>


    <ImageView
        android:id="@+id/motherandbabyLogin"
        android:layout_width="336dp"
        android:layout_height="198dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/baby_mother" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="@dimen/edit_text_width_size"
            android:layout_height="@dimen/edit_text_height_size"
            android:layout_marginLeft="@dimen/signin_margin_left"
            android:layout_marginTop="25dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size"
            />


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="@dimen/edit_text_width_size"
            android:layout_height="@dimen/edit_text_height_size"
            android:layout_marginLeft="@dimen/signin_margin_left"
            android:layout_marginTop="25dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/key"
            android:drawablePadding="16dp"
            android:ems="90"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/edit_text_size" />

    </LinearLayout>




    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="7dp"
            android:textSize="16dp"
            android:textStyle="normal"
            />


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="107dp"
            android:layout_height="32dp"
            android:layout_marginRight="26dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/signin_button_lablel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="normal" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/Vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        app:srcCompat="@drawable/vector1" />

    <ImageView
        android:id="@+id/Shapeone"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="90dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        app:srcCompat="@drawable/shapeone" />

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="230dp"

        android:textSize="12dp"
        android:textStyle="bold"
        />



</RelativeLayout>



